# lsm6-rust

./: Cargo.toml  README.md
src/: lib.rs  registers.rs
