[package]
name = "lsm6ds33"
version = "0.1.0"
authors = ["Codadillo <leoconr@nuevaschool.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Driver for the LSM6D33 using an arbitrary i2c implementation."
readme = "README.md"
repository = "https://github.com/Codadillo/lsm6-rust"

[dependencies]
embedded-hal = "0.2.4"
